:bug:修复poptip弹出时z-index不正确的问题，修复显示不正确的问题

--- a/styles/theme-default/src/commons/mixins.scss
+++ b/styles/theme-default/src/commons/mixins.scss
@@ -1,54 +1,53 @@
 @mixin clearfix() {
-    *zoom: 1;
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+  *zoom: 1;
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 @mixin arrow($width, $borderColor, $bgColor, $direction, $borderWidth:$width * 0.1) {
+  display: block;
+  height: 0;
+  width: 0;
+  border: $width / 2 solid transparent;
+  &:after {
+    position: absolute;
     display: block;
+    left: (-$width + 2 * $borderWidth) /2;
+    top: (-$width + 2 * $borderWidth) /2;
+    content: "";
     height: 0;
     width: 0;
-    border: $width / 2 solid transparent;
+    border: ($width - 2 * $borderWidth) / 2 solid transparent;
+  }
+  @if($direction==top) {
+    border-bottom-color: $borderColor;
     &:after {
-      box-sizing: content-box;
-      position: absolute;
-      display: block;
-      left: (-$width + $borderWidth) /2;
-      top: (-$width + $borderWidth) /2;
-      content: "";
-      height: 0;
-      width: 0;
-      border: ($width - $borderWidth) / 2 solid transparent;
-    }
-    @if($direction==top) {
-      border-bottom-color: $borderColor;
-      &:after {
-        border-bottom-color: $bgColor;
-        margin-top: $borderWidth / 2;
-      }
-    }
-    @if($direction==bottom) {
-      border-top-color: $borderColor;
-      &:after {
-        border-top-color: $bgColor;
-        margin-top: -$borderWidth / 2;
-      }
-    }
-    @if($direction==left) {
-      border-right-color: $borderColor;
-      &:after {
-        border-right-color: $bgColor;
-        margin-left: $borderWidth / 2;
-      }
-    }
-    @if($direction==right) {
-      border-left-color: $borderColor;
-      &:after {
-        border-left-color: $bgColor;
-        margin-left: -$borderWidth / 2;
-      }
+      border-bottom-color: $bgColor;
+      margin-top: $borderWidth;
     }
   }
+  @if($direction==bottom) {
+    border-top-color: $borderColor;
+    &:after {
+      border-top-color: $bgColor;
+      margin-top: -$borderWidth;
+    }
+  }
+  @if($direction==left) {
+    border-right-color: $borderColor;
+    &:after {
+      border-right-color: $bgColor;
+      margin-left: $borderWidth;
+    }
+  }
+  @if($direction==right) {
+    border-left-color: $borderColor;
+    &:after {
+      border-left-color: $bgColor;
+      margin-left: -$borderWidth;
+    }
+  }
+}
